Resolves: tdf#106515 use OpenSymbol, not StarSymbol as the default bullet font

For choosing a bullet from a real font it matters while otherwise its a synonym. Of
course we have this code duplicated three times.

Change-Id: I2428b9a23d997925de3e731b8afe9fb8cf18ed54